Fix: prevent page from panning on mobile Safari

--- a/src/styles/inline.scss
+++ b/src/styles/inline.scss
@@ -11,6 +11,7 @@ html, body {
   font-family: 'Open Sans', sans-serif;
   color: #444;
   background-color: white;
+  overflow: hidden;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; }
 
@@ -135,7 +136,7 @@ input[type=number]::-webkit-outer-spin-button {
   }
   input {
     font-size: 1em;
-    width: 2.5em;
+    width: 3em;
     text-align: right;
   }
 }
